syntax = "proto3";
package bass;

option go_package = "pkg/proto";

import "google/protobuf/timestamp.proto";

message Progress {
  repeated Vertex vertexes = 1;
  repeated VertexStatus statuses = 2;
  repeated VertexLog logs = 3;
};

message Vertex {
  string digest = 1;
  repeated string inputs = 2;
  string name = 3;
  optional google.protobuf.Timestamp started = 4;
  optional google.protobuf.Timestamp completed = 5;
  bool cached = 6;
  optional string error = 7;
}

message VertexStatus {
  string id = 1;
  string vertex = 2;
  string name = 3;
  int64 total = 4;
  int64 current = 5;
  google.protobuf.Timestamp timestamp = 6;
  optional google.protobuf.Timestamp started = 7;
  optional google.protobuf.Timestamp completed = 8;
}

message VertexLog {
  string vertex = 1;
  int64 stream = 2; // TODO: smaller int?
  bytes data = 3;
  google.protobuf.Timestamp timestamp = 4;
}
